# graduation

./: .directory  .gitignore  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  configure  configure.ac
doc/: .~lock.firmware.odt#
doc/book/: .book.tex.swp  KTHEEtitlepage.sty  Makefile  book.aux  book.bbl  book.blg  book.lof  book.out  book.tex  book.toc  cpu.aux  cpu.tex  cpu.toc  fpga.odg  isa.txt  ref.bib  related.txt
doc/emulator/: design.odg  emulator.odt
doc/firmware/: firmware.odt
doc/fund/: Makefile  fund.aux  fund.err  fund.tex  pro-supp-form-filled.doc  pro-supp-form.doc
doc/isa/: mipsel.odt
doc/isis/: Backup Of cpu.pdsbak  Backup Of designs.pdsbak  Backup Of pipeline.pdsbak  Backup Of schematics.pdsbak  Backup Of tlc.pdsbak  Backup Of vga.pdsbak  Last Loaded designs.DBK  cpu.pdsprj  designs.dsn  designs.pdsprj  pipeline.pdsprj  pipeline.pdsprj.inspiron.iocoder.workspace  tlc.pdsprj  vga.pdsprj
doc/proposal/: proposal.odt
doc/system/: Makefile  sysdesign.aux  sysdesign.tex  sysdesign.toc
firmware/: Makefile  Makefile.am  Makefile.in  bios.c  bios.h  boot.c  calc.c  calc.h  calc.si  card.c  disk.c  disk.h  diskfs.c  diskfs.h  firmware.elf  firmware.ld  isr.c  isr.h  kbd.c  kbd.h  kbd.si  logo.c  logo.h  main.c  main.si  mbr.c  mbr.h  mem.c  mem.h  mem.si  pic.c  pic.h  pit.c  pit.h  post.c  rom.c  rom.h  sdcard.c  sdcard.h  shell.c  (+10 more)
hardware/: .directory  Makefile.am  Makefile.in  TLC.vhd  TLC_test.vhd  TLC_test_pkg.vhd  mipscomp.ucf  tlc.vhd  tlc_sim.vhdl
hardware/cpu/: .directory  add.vhd  add_test.vhd  alu.vhd  alu_test.vhd  alu_tlc.vhd  aluin.vhd  aluout.vhd  and.vhd  and2x1.vhd  bit.vhd  cache.vhd  cachearray.vhd  clkdiv.vhd  cpu.vhd  cpu_pkg.vhd  cu.vhd  cu_logic.vhd  cu_output.vhd  cu_test.vhd  cu_test_pkg.vhd  eor.vhd  lookup.vhd  lookup_pkg.vhd  microcode.vhd  microcode_pkg.vhd  mux8x1.vhd  not1x1.vhd  ora.vhd  pipeline.vhd  regs.vhd  shl.vhd  shr.vhd  sub.vhd  tlb.vhd
hardware/cpu_test/: dmemif.vhd  dtlc.vhd  dvga.vhd  txt_util.vhd
hardware/kbd/: debouncer.vhd  kbdctl.vhd  ps2.vhd
hardware/mem/: memif.vhd
hardware/pic/: pic.vhd
hardware/pit/: pit.vhd
hardware/vga/: clkgen.vhd  clkgen_sim.vhd  clock_25M.vhd  crt.vhd  dac.vhd  decoder.vhd  graphics.vhd  ppuseq.vhd  sequencer.vhd  vga.vhd  vgaram.vhd  vgaram0.vhd  vgaram1.vhd  vgaram2.vhd  vgaram3.vhd  vgaseq.vhd
logo/: Makefile.am  Makefile.in  generate.py
mipsemu/: Makefile  Makefile.am  Makefile.in  clock.c  clock.h  cpu.c  cpu.h  joy.c  joy.h  kbd.c  kbd.h  main.c  mem.c  mem.h  mipsemu  pic.c  pic.h  pit.c  pit.h  ppu.c  ppu.h  vga.c  vga.h
quafios/: Makefile.am  Makefile.in
quafios/boot/: Makefile.am  Makefile.in
quafios/boot/loader/: bios.c  bootinfo.c  loader.ld  main.c  menu.c
quafios/calc/: Makefile.am  Makefile.in
quafios/coreutils/: Makefile.am  Makefile.in  ls.c
quafios/cpanel/: Makefile.am  Makefile.in
quafios/demo/: Makefile.am  Makefile.in  fib.s  main.c
quafios/edit/: Makefile.am  Makefile.in  console.c  file.c  main.c
quafios/gui/: Makefile.am  Makefile.in
quafios/init/: Makefile.am  Makefile.in
quafios/kernel/: Makefile.am  Makefile.in  main.c
quafios/kernel/arch/i386/: exception.c  init.c  irq.c  page.c  panic.c  proc.c  protect.c  resource.c  spinlock.c  stack.c  svc.c
quafios/kernel/arch/mips/: init.c  irq.c  isr.s  page.c  panic.c  proc.c  resource.c  spinlock.c  stack.c  svc.c
quafios/kernel/core/: printk.c
quafios/kernel/drivers/: device.c
quafios/kernel/drivers/genesis/: root.c
quafios/kernel/drivers/keyboard/: gpkbd.c
quafios/kernel/drivers/machine/: .directory  ibmpc.c  mipscomp.c
quafios/kernel/drivers/mem/: ramdisk.c
quafios/kernel/drivers/pic/: gppic.c
quafios/kernel/drivers/storage/: bootdisk.c  disk.c
quafios/kernel/drivers/timer/: 8253.c  alarm.c  gppit.c
quafios/kernel/drivers/tty/: vtty.c
quafios/kernel/drivers/video/: vga.c
quafios/kernel/fs/: exec.c  init.c  read_write.c  tmp.c
quafios/kernel/include/arch/: cache.h  mem.h  page.h  spinlock.h  stack.h  type.h
quafios/kernel/include/fs/: diskfs.h
quafios/kernel/include/i386/: mem.h
quafios/kernel/include/lib/: linkedlist.h
quafios/kernel/include/mips/: asm.h  cache.h  mem.h  page.h  spinlock.h  stack.h  type.h
quafios/kernel/include/storage/: disk.h
quafios/kernel/include/sys/: bootinfo.h  class.h  device.h  mm.h  proc.h  semaphore.h
quafios/kernel/init/: init.c
quafios/kernel/klib/: string.c
quafios/kernel/ld/: arch32.ld
quafios/kernel/mm/: init.c  kmem.c  mmst.c  pmem.c  umem.c
quafios/kernel/proc/: exit.c  fork.c  init.c  tmp.c
quafios/launcher/: Makefile.am  Makefile.in
quafios/media/: Makefile.am  Makefile.in
quafios/nes/: Makefile.am  Makefile.in  bios.c  cartridge.s  common.inc  cpu.s  entry.s  main.c  mem.s  nes.ld  ppu.s  splash.txt
quafios/pascal/: Makefile.am  Makefile.in
quafios/qash/: Makefile.am  Makefile.in
quafios/qlibc/: Makefile.am  Makefile.in
quafios/qlibc/entry/: _start.c
quafios/qlibc/stdlib/: malloc.c
quafios/qlibc/string/: string.c
quafios/qonqueror/: Makefile.am  Makefile.in
quafios/qonsole/: Makefile.am  Makefile.in
quafios/quafshot/: Makefile.am  Makefile.in
quafios/rash/: Makefile.am  Makefile.in  internal.c  main.c  proccmd.c  token.c
quafios/tools/: Makefile.am  Makefile.in
quafios/winman/: Makefile.am  Makefile.in
upload/: Makefile  Makefile.am  Makefile.in  NOTES  upload  upload.c
vhdsim/: Makefile.am  Makefile.in  main.c  vhpi_user.h
